--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                 </div>
             </div>
 
-            <div class="frame2"></div>
+            <div class="frame2">
+                <img src="galerie.png" alt="Galerie à l'exterieur">
+            </div>
         </div>
 
         <section id="oeuvres" class="section">
