--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="frame2">
-                <img src="galerie.png" alt="Galerie à l'exterieur">
+                <img src="images/galerie.png" alt="Galerie à l'exterieur">
             </div>
         </div>
 
