--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
             <div class="menu-container">
                 <nav class="menu">
+                     <div class="burger" id="menuIcon">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                    
                     <ul class="menu-list">
                         <li><a href="#oeuvres">oeuvres</a></li>
                         <li><a href="#artistes">artistes</a></li>
