--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <i class="fa-solid fa-bars"></i>
                     </div>
                     
-                    <ul class="menu-list">
+                    <ul class="menu-list" id="menuList">
                         <li><a href="#oeuvres">oeuvres</a></li>
                         <li><a href="#artistes">artistes</a></li>
                         <li><a href="#évènements">évènements</a></li>
