--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <i class="fa-regular fa-envelope"></i>
                 </a>
                 <a href="https://maps.app.goo.gl/1FjbkU4MmG5gAFeM8" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-solid fa-location-dot"></i>
+                    <i class="fa-solid fa-location-dot" aria-label="Localisation"></i>
                 </a>
             </div>
         </footer>
