--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
         <title>Dedal des couleurs</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Découvrez les dernières expositions et événements à la galerie d'art contemporain Dedal des Couleurs, un espace dynamique présentant, au centre de Paris, des œuvres inspirantes et innovantes d'artistes du monde entier.">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jomolhari&display=swap">
