--- a/page2.html
+++ b/page2.html
@@ -82,13 +82,13 @@
                 </div>
                 <div class="icones">
                     <a href="https://www.instagram.com/dedalgallery/" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-instagram" aria-label="Instagram"></i>
                     </a>
                     <a href="mailto:info.dedal@gmail.com" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-regular fa-envelope"></i>
+                        <i class="fa-regular fa-envelope" aria-label="Email"></i>
                     </a>
                     <a href="https://maps.app.goo.gl/1FjbkU4MmG5gAFeM8" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-solid fa-location-dot"></i>
+                        <i class="fa-solid fa-location-dot" aria-label="Localisation"></i>
                     </a>
                 </div>
             </footer>
