--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
             <div class="icones">
                 <a href="https://www.instagram.com/dedalgallery/" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-instagram" aria-label="Instagram"></i>
+                    <span class="icon-text">Instagram</span>
                 </a>
                 <a href="mailto:info.dedal@gmail.com" target="_blank" rel="noopener noreferrer">
                     <i class="fa-regular fa-envelope" aria-label="Email"></i>
