--- a/page2.html
+++ b/page2.html
@@ -83,12 +83,15 @@
                 <div class="icones">
                     <a href="https://www.instagram.com/dedalgallery/" target="_blank" rel="noopener noreferrer">
                         <i class="fa-brands fa-instagram" aria-label="Instagram"></i>
+                         <span class="icon-text">Instagram</span>
                     </a>
                     <a href="mailto:info.dedal@gmail.com" target="_blank" rel="noopener noreferrer">
                         <i class="fa-regular fa-envelope" aria-label="Email"></i>
+                         <span class="icon-text">Email</span>
                     </a>
                     <a href="https://maps.app.goo.gl/1FjbkU4MmG5gAFeM8" target="_blank" rel="noopener noreferrer">
                         <i class="fa-solid fa-location-dot" aria-label="Localisation"></i>
+                         <span class="icon-text">Localisation</span>
                     </a>
                 </div>
             </footer>
