--- a/page2.html
+++ b/page2.html
@@ -22,6 +22,10 @@
 
             <div class="menu-container">
                 <nav class="menu">
+                    <div class="burger" id="menuIcon">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                    
                     <ul class="menu-list">
                         <li><a href="index.html#oeuvres">oeuvres</a></li>
                         <li><a href="index.html#artistes">artistes</a></li>
