--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                 <h3>ABONNEZ-VOUS À LA NEWSLETTER</h3>
             </div>
             <form>
+                <label for="email" class="email-label">Adresse e-mail</label>
                 <input type="email" placeholder="Entrez votre e-mail">
                 <button type="reset">S'inscrire</button>
             </form>
