--- a/index.html
+++ b/index.html
@@ -232,6 +232,18 @@
             </div>
             <form>
                 <label for="email" class="email-label">Adresse e-mail</label>
+                <style>
+                email-label{
+                position: absolute;
+                width: 1px;
+                height: 1px;
+                padding: 0;
+                overflow: hidden;
+                clip: rect(0, 0, 0, 0);
+                white-space: nowrap;
+                border: 0;
+                }
+                </style>
                 <input type="email" placeholder="Entrez votre e-mail">
                 <button type="reset">S'inscrire</button>
             </form>
