--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                 <p>Dimanche-lundi : fermé</p>
             </div>
             <div class="icones">
-                <a href="https://www.instagram.com/dedalgallery/" target="_blank" rel="noopener noreferrer">
-                    <i class="fa-brands fa-instagram" aria-label="Instagram"></i>
+                <a href="https://www.instagram.com/dedalgallery/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+                    <i class="fa-brands fa-instagram"></i>
                     <span class="icon-text">Instagram</span>
                 </a>
                 <a href="mailto:info.dedal@gmail.com" target="_blank" rel="noopener noreferrer">
