--- a/page2.html
+++ b/page2.html
@@ -85,16 +85,16 @@
                     <p>Dimanche-lundi : fermé</p>
                 </div>
                 <div class="icones">
-                    <a href="https://www.instagram.com/dedalgallery/" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-brands fa-instagram" aria-label="Instagram"></i>
+                    <a href="https://www.instagram.com/dedalgallery/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+                        <i class="fa-brands fa-instagram"></i>
                          <span class="icon-text">Instagram</span>
                     </a>
-                    <a href="mailto:info.dedal@gmail.com" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-regular fa-envelope" aria-label="Email"></i>
+                    <a href="mailto:info.dedal@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Email">
+                        <i class="fa-regular fa-envelope"></i>
                          <span class="icon-text">Email</span>
                     </a>
-                    <a href="https://maps.app.goo.gl/1FjbkU4MmG5gAFeM8" target="_blank" rel="noopener noreferrer">
-                        <i class="fa-solid fa-location-dot" aria-label="Localisation"></i>
+                    <a href="https://maps.app.goo.gl/1FjbkU4MmG5gAFeM8" target="_blank" rel="noopener noreferrer" aria-label="Localisation">
+                        <i class="fa-solid fa-location-dot"></i>
                          <span class="icon-text">Localisation</span>
                     </a>
                 </div>
