--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="frame2">
-                <img src="images/galerie.png" alt="Galerie à l'exterieur">
+                <img src="images/galerie.avif" alt="Galerie à l'exterieur">
             </div>
         </div>
 
