--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="events-gallery">
                 <div class="event-left">
                     <div class="event">
-                        <img class="im1" src="images/evenement1.jpg" alt="Événement 1">
+                        <img class="im1" src="images/evenement1.avif" alt="Événement 1">
                         <div class="overlay">
                             <p class="nom1">Atelier de sculpture</p>
                             <p class="time">07/12/2024 19:00-20:30</p>
