--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
         <section class="instagram">
             <div class="inst-left">
-                <img src="images/instagram.jpg" alt="Instagram">
+                <img src="images/instagram.avif" alt="Instagram">
                 <div class="suivez-nous">
                     <h3>DEDALGALLERY</h3>
                     <p>Suivez-nous sur notre Instagram</p>
@@ -206,14 +206,14 @@
                 </div>
                 <div class="event-right">
                     <div class="event">
-                        <img class="im2" src="images/evenement2.jpg" alt="Événement 2">
+                        <img class="im2" src="images/evenement2.avif" alt="Événement 2">
                         <div class="overlay">
                             <p class="nom1">Performance chorégraphique</p>
                             <p class="time">14/12/2024 19:00-20:30</p>
                         </div>
                     </div>
                     <div class="event">
-                        <img class="im2" src="images/evenement3.jpg" alt="Événement 3">
+                        <img class="im2" src="images/evenement3.avif" alt="Événement 3">
                         <div class="overlay">
                             <p class="nom1">Public Talk</p>
                             <p class="time">21/12/2024 19:00-20:30</p>
