--- a/page2.html
+++ b/page2.html
@@ -38,8 +38,8 @@
 
         <section class="histoire">
             <div class="histoire-photo">
-                <img src="images/histoire1.png" alt="Galerie à l'intérieur">
-                <img src="images/histoire2.png" alt="Visiteurs">
+                <img src="images/histoire1.avif" alt="Galerie à l'intérieur">
+                <img src="images/histoire2.avif" alt="Visiteurs">
             </div>
 
             <div class="histoire-texte">
@@ -61,7 +61,7 @@
             </div>
 
             <div class="dechewsky-photo">
-                <img src="images/histoire3.png" alt="M. Dechewsky">
+                <img src="images/histoire3.avif" alt="M. Dechewsky">
             </div>
         </section>
 
