--- a/page2.html
+++ b/page2.html
@@ -44,10 +44,9 @@
 
             <div class="histoire-texte">
                 <h2>notre histoire</h2>
-                <p> Dedal des Couleurs a été fondée en octobre 2012<br>par M. Dechewsky, désireux de créer un espace<br>novateur pour mettre en lumière des talents<br> locaux et internationaux. Sa vision est d’offrir<br>un lieu où l’art pourrait s’exprimer librement,<br>tout en engageant un dialogue avec le public.</p>
-                <p>Inspiré par la richesse culturelle de Paris, il avait<br>choisi d’implanter la galerie au cœur du quartier<br>dynamique du Marais. Le lieu a été transformé<br>en un écrin moderne et minimaliste, parfaitement<br>adapté à la mise en valeur des œuvres.</p>
-                <p>La galerie s’est faite remarquer pour son soutien<br>à des projets expérimentaux, qui mêlaient souvent<br>différentes disciplines comme la peinture,<br>la performance, le numérique et la sculpture.</p>
-                <p>Aujourd’hui, Dedal des Couleurs continue<br>d’honorer cet esprit fondateur, en restant fidèle<br>à son ambition d’inspirer et d’offrir une nouvelle<br>perspective sur l’art contemporain.</p>
+                <p>Dedal des Couleurs a été fondée en octobre 2012 par M. Dechewsky, désireux de créer un espace novateur pour mettre en lumière des talents locaux et internationaux. Sa vision est d’offrir un lieu où l’art pourrait s’exprimer librement,<br>tout en engageant un dialogue avec le public.</p>
+                <p>Dedal des Couleurs s’est faite remarquer pour son soutien à des projets expérimentaux, qui mêlaient souvent différentes disciplines comme la peinture, la performance, le numérique et la sculpture.</p>
+                <p>Aujourd’hui, Dedal des Couleurs continue d’honorer cet esprit fondateur, en restant fidèle à son ambition d’inspirer et d’offrir une nouvelle perspective sur l’art contemporain.</p>
             </div>
         </section>
 
