--- a/page2.html
+++ b/page2.html
@@ -44,7 +44,7 @@
 
             <div class="histoire-texte">
                 <h2>notre histoire</h2>
-                <p>Dedal des Couleurs a été fondée en octobre 2012 par M. Dechewsky, désireux de créer un espace novateur pour mettre en lumière des talents locaux et internationaux. Sa vision est d’offrir un lieu où l’art pourrait s’exprimer librement,<br>tout en engageant un dialogue avec le public.</p>
+                <p>Dedal des Couleurs a été fondée en octobre 2012 par M. Dechewsky, désireux de créer un espace novateur pour mettre en lumière des talents locaux et internationaux. Sa vision est d’offrir un lieu où l’art pourrait s’exprimer librement, tout en engageant un dialogue avec le public.</p>
                 <p>Dedal des Couleurs s’est faite remarquer pour son soutien à des projets expérimentaux, qui mêlaient souvent différentes disciplines comme la peinture, la performance, le numérique et la sculpture.</p>
                 <p>Aujourd’hui, Dedal des Couleurs continue d’honorer cet esprit fondateur, en restant fidèle à son ambition d’inspirer et d’offrir une nouvelle perspective sur l’art contemporain.</p>
             </div>
