--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
                         <i class="fa-solid fa-bars"></i>
                     </div>
                     
-                    <ul class="menu-list">
+                    <ul class="menu-list" id="menuList">
                         <li><a href="index.html#oeuvres">oeuvres</a></li>
                         <li><a href="index.html#artistes">artistes</a></li>
                         <li><a href="index.html#évènements">évènements</a></li>
