--- a/page2.html
+++ b/page2.html
@@ -30,7 +30,7 @@
                         <li><a href="index.html#oeuvres">oeuvres</a></li>
                         <li><a href="index.html#artistes">artistes</a></li>
                         <li><a href="index.html#évènements">évènements</a></li>
-                        <li><a href="index.html#contact">contact</a></li>
+                        <li><a href="#contact">contact</a></li>
                     </ul>
                 </nav>
             </div>
