--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
                 <div class="slides">
                     <div class="slide1">
                         <div class="gallery-item">
-                            <img src="images/artiste1.png" alt="Rémi Fox">
+                            <img src="images/artiste1.avif" alt="Rémi Fox">
                             <p class="nom">Rémi Fox</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/artiste2.png" alt="The Unseen">
+                            <img src="images/artiste2.avif" alt="The Unseen">
                             <p class="nom">The Unseen</p>
                         </div>
                         <div class="gallery-item">
-                            <img src="images/artiste3.png" alt="Iva Lassen">
+                            <img src="images/artiste3.avif" alt="Iva Lassen">
                             <p class="nom">Iva Lassen</p>
                         </div>
                     </div>
