--- a/page2.html
+++ b/page2.html
@@ -99,6 +99,6 @@
                 </div>
             </footer>
         </section>
-        <script src="script.js"></script>
+        <script src="page2.js"></script>
     </body>
 </html>
