--- a/page2.html
+++ b/page2.html
@@ -55,8 +55,8 @@
         <section class="fondateur">
             <div class="dechewsky">
                 <h2>m. dechewsky</h2>
-                <p>M. Dechewsky a grandi dans une famille<br>d'artisans, où il a développé très tôt une<br>fascination pour la création artistique.<br>Après des études en histoire de l'art à la<br>Sorbonne et une spécialisation en gestion<br>culturelle, il a travaillé pendant plusieurs<br>années comme commissaire d’exposition<br>indépendant, organisant des projets des<br>biennales à travers l’Europe.</p>
-                <p>C'est lors d'un séjour à Berlin qu'il a<br>découvert sa passion pour les artistes<br>émergents, ce qui l'a poussé à revenir<br>à Paris avec la vision de transformer la<br>galerie en un tremplin pour les artistes.</p>
+                <p>M. Dechewsky a grandi dans une famille d'artisans, où il a développé très tôt une fascination pour la création artistique.Après des études en histoire de l'art à la Sorbonne et une spécialisation en gestion culturelle, il a travaillé pendant plusieurs années comme commissaire d’exposition indépendant, organisant des projets des biennales à travers l’Europe.</p>
+                <p>C'est lors d'un séjour à Berlin qu'il a découvert sa passion pour les artistes émergents, ce qui l'a poussé à revenir à Paris avec la vision de transformer la galerie en un tremplin pour les artistes.</p>
             </div>
 
             <div class="dechewsky-photo">
